fixed social links gap

--- a/src/components/Links/links.module.scss
+++ b/src/components/Links/links.module.scss
@@ -66,7 +66,7 @@
     margin-top: 4em;
     display: flex;
     flex-direction: row nowrap;
-    gap: 30px;
+    gap: 15px;
     align-items: center;
     justify-content: center;
     a {
